--- a/index3.html
+++ b/index3.html
@@ -3,9 +3,20 @@
 <!--
 <div id="apvad-5a646702bef99f3ad8d5a8d3a8d7946a" style="position:relative;margin-left:auto;margin-right:auto;width:300px;" data-adformat="rect"></div>
 <script type="text/javascript" src="//apvdr.com/v2/coad.js.php?s=5a646702bef99f3ad8d5a8d3a8d7946a&brd={CLICK_URL_ENC}"></script>
--->
+
 <div id="apvad-54b4743c6eb978dd36c8183b394f8587" style="position:relative;margin-left:auto;margin-right:auto;width:300px;" data-adformat="rect"></div>    
 <script type="text/javascript" src="//apvdr.com/v2/coad.js.php?s=54b4743c6eb978dd36c8183b394f8587"></script>    
  <script type="text/javascript" src="//cdn.apvdr.com/js/apv-ifbstr.min.js"></script>
+-->
+<!-- Segment Pixel - データフィード - DO NOT MODIFY -->
+<script type='text/javascript'>
+  //<![CDATA[
+    var supership_pixel_params = {
+      datafeed_product_id: "STRING_PRODUCT_ID"
+    };
+  //]]>
+</script>
+<script src='http://asp-rc.scaleout.jp/s/so_sg.js?datafeed=detail-14259&sgid=9891' type='text/javascript'></script>
+<!-- End of Segment Pixel -->
 </body>
 </html>
