--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@ abbb<img src="//cm.g.doubleclick.net/pixel?google_nid=bigmining_dmp&google_cm" w
 </script>
 <script src='https://ssl.socdm.com/s/so_sg.js?datafeed=detail-14253&sgid=34868' type='text/javascript'></script>
 <!-- End of Segment Pixel -->
+
+<a href="http://tg.socdm.com/aux/rd?url=http%3a%2f%2fbid%2esocdm%2ecom%2faux%2frd%3furl%3dhttp%253a%252f%252ftest4649%252egithub%252eio%252findex2%252ehtml">reffere確認</a>
 </body>
 </html>
