--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,8 @@
 <html>
 <body>
+<script type="text/javascript">
+console.log(document.referrer);
+</script>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <div style="background-color: #000;width:300px;height:250px;margin:0 auto;padding:0;text-align:center;color:#fff;" id="target">
