--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <body>
 <img src="//tg.socdm.com/aux/idsync?proto=tvasahi" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
 abbb<img src="//cm.g.doubleclick.net/pixel?google_nid=bigmining_dmp&google_cm" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;"/>a
+
+<img src="//tg.socdm.com/aux/extsync?aid=sony&sid=DMP_LSPX&attr_raw=LSPX%3d1" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;"/>
+
+<img src="//tg.socdm.com/aux/extsync?aid=sony&sid=DMP_LSPX&attr_raw= LSPXNS%3d1" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;"/>
+
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div id="apvad-64fed952a457b4f1709669c652538f23" style="position:relative;margin-left:auto;margin-right:auto;width:300px;" data-adformat="rect"></div>
 <script type="text/javascript" src="//dev1.srv.appvador.com/endpoints2/uvat.js.php?s=64fed952a457b4f1709669c652538f23"></script>
