--- a/index4.html
+++ b/index4.html
@@ -4,6 +4,12 @@
 テストA 電通PMP（PMP150_1） 10816
 -->
 <script src="http://bigman-test.scaleout.jp/sdk/js/adg-script-loader-stg.js?id=10189&targetID=adg_10189&displayid=1&adType=BILLBOARD&async=false&tagver=2.0.0"></script>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+<!--
+テストA 電通PMP（PMP200_1） 10815
+-->
+<script src="http://bigman-test.scaleout.jp/sdk/js/adg-script-loader-stg.js?id=10188&targetID=adg_10188&displayid=1&adType=BILLBOARD&async=false&tagver=2.0.0"></script>
+
 
 
 
