--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,7 @@
 console.log(document.referrer);
 </script>
 
+<iframe src="https://api.scaleout.jp/api/creatives/584814/preview.html"></iframe>
 <style>
     .mainWrapper_728-90-1 .jsInfoMarkWrapper .jsInfoMark,.mainWrapper_728-90-1 img,article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}a,abbr,address,article,aside,audio,b,blockquote,body,canvas,caption,cite,code,d
 d,del,details,dfn,div,dl,dt,em,fieldset,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,p,pre,q,samp,section,small,span,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,ul,var,video
