--- a/index4.html
+++ b/index4.html
@@ -1,10 +1,8 @@
 <html>
+<head>
+<script type="text/javascript" src="//i.socdm.com/s/so_dmp.js?service_id=ss_nanapi"></script>
+</head>
 <body>
-
-<!-- Segment Pixel - [変更しないで!]ピギーバックあり - DO NOT MODIFY -->
-<script src='//asp-rc.scaleout.jp/s/so_sg.js?pb=1&sgid=9885' type='text/javascript'></script>
-<!-- End of Segment Pixel -->
-
 
 
 
