--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <body>
 
 <script type="text/javascript" src="//i.socdm.com/s/so_dmp.js?service_id=xxx"></script>
+<img src="//tg.socdm.com/aux/idsync?proto=rakuten" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;" />
 <img src="//tg.socdm.com/aux/idsync?proto=tvasahi" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
 abbb<img src="//cm.g.doubleclick.net/pixel?google_nid=bigmining_dmp&google_cm" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;"/>a
 
