--- a/index4.html
+++ b/index4.html
@@ -1,9 +1,12 @@
 <html>
 <head>
+<!--
 <script type="text/javascript" src="//i.socdm.com/s/so_dmp.js?service_id=ss_nanapi"></script>
+-->
 </head>
 <body>
-
+<script type="text/javascript" src="https://cdn.apvdr.com/js/ScriptLoader.min.js"></script>
+<script type="text/javascript">APV.ScriptLoader.inject('https://i.socdm.com/sdk/js/adg-script-loader.js?id=10211&targetID=adg_10211&displayid=1&adType=FREE&width=320&height=180&async=true&tagver=2.0.0&nofrm=st%3dnoad')</script>
 
 
 </body>
