--- a/index2.html
+++ b/index2.html
@@ -2,6 +2,7 @@
 <body>
 <script type="text/javascript">
 (function() {
+        var td_client_id = "1234";
         var el = document.createElement('img');
         el.src = (('https:' == document.location.protocol) ? 'https://' : 'http://')
                + 'tg.socdm.com/aux/idsync?proto=treasuredata&td_client_id=' + td_client_id ;
