--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<img src="http://cm.g.doubleclick.net/pixel?google_nid=supership_dmp&google_cm" />
+<img src="http://cm.g.doubleclick.net/pixel?google_nid=supership_dmp&google_cm" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0; />
 -------
 <script type="text/javascript">
 (function() {
