--- a/index2.html
+++ b/index2.html
@@ -1,20 +1,7 @@
 <html>
 <body>
-<img src="http://cm.g.doubleclick.net/pixel?google_nid=supership_dmp&google_cm" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0; />
+<img src="http://cm.g.doubleclick.net/pixel?google_nid=supership_dmp&google_cm" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;" />
 -------
-<script type="text/javascript">
-(function() {
-        var td_client_id = "1234";
-        var el = document.createElement('img');
-        el.src = (('https:' == document.location.protocol) ? 'https://' : 'http://')
-               + 'tg.socdm.com/aux/idsync?proto=treasuredata&td_client_id=' + td_client_id ;
-        el.width=1;el.height=1;el.style.display='none';
-        document.body.appendChild(el);
-          })();
-</script>
-<script type="text/javascript">
-console.log(document.referrer);
-</script>
 
 
 
