--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-<img src="http://cm.g.doubleclick.net/pixel?google_nid=supership_dmp&google_cm" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;" />
+
+<script type="text/javascript" src="https://cdn.apvdr.com/js/ScriptLoader.min.js"></script>
+<script type="text/javascript">APV.ScriptLoader.inject('https://bigman-test.scaleout.jp/sdk/js/adg-script-loader-stg.js?id=10283&targetID=adg_10283&displayid=1&adType=FREE&width=320&height=180&async=true&tagver=2.0.0&nofrm=st%3dnoad')</script>
 -------
 
 
