--- a/index3.html
+++ b/index3.html
@@ -1,47 +1,31 @@
 <html>
-<body>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+  <head>
+    <!-- Load dependent stylesheets. -->
+    <link href="//vjs.zencdn.net/4.5/video-js.css" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/videojs.ads.css" />
+    <link rel="stylesheet" href="path/to/videojs.ima.css" />
+  </head>
 
-<script language="JavaScript" type="text/javascript">
-//<![CDATA[
-(function() {
-  var random = new Date();
-  
-  var so_src = ('https:' == document.location.protocol ? 'https://tg.test.socdm.com' : 'http://tg.test.socdm.com') +
-  '/adsv/v1?posall=POS&id=8988&t=js&rnd='+ random.getTime() + '&tp=' + encodeURIComponent(document.location.href) + '&pp=' + encodeURIComponent(document.referrer);
-  
-   document.write('<sc'+'ript language="JavaScript" type="text/javascript" src="'+so_src+'"></sc'+'ript>');
-})();
-//]]>
-</script>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-</body>
+  <body>
+    <video id="content_video" class="video-js vjs-default-skin"
+        controls preload="auto" width="YOUR_VIDEO_WIDTH" height="YOUR_VIDEO_HEIGHT">
+      <source src="PATH_TO_YOUR_CONTENT_VIDEO" type="YOUR_CONTENT_VIDEO_TYPE" />
+    </video>
+    <!-- Load dependent scripts -->
+    <script src="//vjs.zencdn.net/4.5/video.js"></script>
+    <script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
+    <script src="videojs.ads.js"></script>
+    <script src="videojs.ima.js"></script>
+    <script type="text/javascript">
+var player = videojs('content_video');
+//...
+google.ima.settings.setVpaidAllowed(true);
+//...
+player.ima({
+    debug: config['debug'],
+    adTagUrl: 'https://pixel.adsafeprotected.com/vast?anId=923003&ias_ad_duration=30&advId=${ADVERTISER_ID}&campId=${ORDER_ID}&pubId=${SSP_TAG_ID}&chanId=${SIZE}&placementId=${SCHEDULE_ID}&planId=${CREATIVE_ID}&adsafe_par&bidurl=16ar1s&bidPr=0&uId=${UID}&impId=${SEQ_ID}&originalVast=https://apvdr.com/v2/vast.xml.php?s=d945157fe5e42664459f17b9adc963ca&vv=2.0&ve=0',
+    id: 'content_video'
+});
+    </script>
+  </body>
 </html>
