--- a/index3.html
+++ b/index3.html
@@ -2,8 +2,8 @@
   <head>
     <!-- Load dependent stylesheets. -->
     <link href="//vjs.zencdn.net/4.5/video-js.css" rel="stylesheet">
-    <link rel="stylesheet" href="path/to/videojs.ads.css" />
-    <link rel="stylesheet" href="path/to/videojs.ima.css" />
+    <link rel="stylesheet" href="videojs.ads.css" />
+    <link rel="stylesheet" href="videojs.ima.css" />
   </head>
 
   <body>
