--- a/index2.html
+++ b/index2.html
@@ -1,41 +1,9 @@
 <html>
 <body>
 
- <script type="text/javascript"> 
- (function(w){ 
-    var groupId = '1000058559'; 
-    var unitId = '1000088265'; 
-    var id = unitId + '.' + String(Date.now()) + '.' + String(Math.random()); 
-    var url = 'https://m-sakamoto.r53.fluct.me/native/?G='+groupId+'&u='+unitId+'&mp='+id+ 
-        '&href='+encodeURIComponent(w.location.href)+ 
-        '&R='+encodeURIComponent(w.document.referrer); 
-    var s = w.document.createElement('script'); 
-    s.id = 'fluct-nativertb-' + id; 
-    s.src = url; 
-    s.async = true; 
-    w.document.body.appendChild(s); 
- })(window); 
- </script>
-```
-
-iOS
-```
-<script type="text/javascript"> 
- (function(w){ 
-    var groupId = '1000058559'; 
-    var unitId = '1000088264'; 
-    var id = unitId + '.' + String(Date.now()) + '.' + String(Math.random()); 
-    var url = 'https://m-sakamoto.r53.fluct.me/native/?G='+groupId+'&u='+unitId+'&mp='+id+ 
-        '&href='+encodeURIComponent(w.location.href)+ 
-        '&R='+encodeURIComponent(w.document.referrer); 
-    var s = w.document.createElement('script'); 
-    s.id = 'fluct-nativertb-' + id; 
-    s.src = url; 
-    s.async = true; 
-    w.document.body.appendChild(s); 
- })(window); 
- </script>
--------
+<!-- Segment Pixel - so_blog - DO NOT MODIFY -->
+<script src='https://i.socdm.com/s/so_sg.js?sgid=10051&t=1' type='text/javascript'></script>
+<!-- End of Segment Pixel -->
 
 
 
