--- a/index2.html
+++ b/index2.html
@@ -1,9 +1,11 @@
 <html>
 <body>
 
-<!-- Segment Pixel - so_blog - DO NOT MODIFY -->
-<script src='https://i.socdm.com/s/so_sg.js?sgid=10051&t=1' type='text/javascript'></script>
-<!-- End of Segment Pixel -->
+<script src="https://bs.serving-sys.com/BurstingPipe/adServer.bs?cn=rsb&c=28&pli=19758709&PluID=0&w=320&h=100&ord=${RANDOM}&ncu=$$${CLICK_URL_1}$$</script>
+<noscript>
+<a href="${CLICK_URL_1}https%3A//bs.serving-sys.com/BurstingPipe/adServer.bs%3Fcn%3Dbrd%26FlightID%3D19758709%26Page%3D%26PluID%3D0%26Pos%3D1717475979" target="_blank"><img src="https://bs.serving-sys.com/BurstingPipe/adServer.bs?cn=bsr&FlightID=19758709&Page=&PluID=0&Pos=1717475979" border=0 width=320 height=100></a>
+</noscript>
+
 
 
 
