--- a/index5.html
+++ b/index5.html
@@ -10,7 +10,7 @@ var xmlHttp;
 xmlHttp = new XMLHttpRequest();
 xmlHttp.withCredentials = true;
 //こっちはエラー起きる
-xmlHttp.open("GET", "https://tg.socdm.com/sa/empty?said=sg10051-s&t=2", false);
+xmlHttp.open("GET", "https://tg.socdm.com/sa/img?said=sg10051-s&t=2", false);
 //こっちはエラー起きない
 //xmlHttp.open("GET", "http://d.socdm.com/adsv/v1?posall=SSPLOC&id=10722&sdkver=1.5.0&sdktype=0&acl=off&t=json3", true);
 xmlHttp.send(null);
