--- a/index5.html
+++ b/index5.html
@@ -10,7 +10,7 @@ var xmlHttp;
 xmlHttp = new XMLHttpRequest();
 xmlHttp.withCredentials = true;
 //こっちはエラー起きる
-xmlHttp.open("GET", "https://tg.socdm.com/sa/js?said=sg10051-s&t=2", false);
+xmlHttp.open("GET", "http://tg.socdm.com/aux/vast_event?page_id=10392&schedule_id=53835.58575.392934&creative_id=859448&event=firstQuartile&seqid=93283136-f01d-b16f-3e7a-a2f314277bc5", false);
 //こっちはエラー起きない
 //xmlHttp.open("GET", "http://d.socdm.com/adsv/v1?posall=SSPLOC&id=10722&sdkver=1.5.0&sdktype=0&acl=off&t=json3", true);
 xmlHttp.send(null);
