--- a/index.html
+++ b/index.html
@@ -1,47 +1,5 @@
 <html>
 <body>
-
-<script type="text/javascript" src="//i.socdm.com/s/so_dmp.js?service_id=xxx"></script>
-<img src="//tg.socdm.com/aux/idsync?proto=rakuten" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;" />
-<img src="//tg.socdm.com/aux/idsync?proto=tvasahi" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-abbb<img src="//cm.g.doubleclick.net/pixel?google_nid=bigmining_dmp&google_cm" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;"/>a
-
-<img src="//tg.socdm.com/aux/extsync?aid=sony&sid=DMP_LSPX&attr_raw=LSPX%3d1" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;"/>
-
-<img src="//tg.socdm.com/aux/extsync?aid=sony&sid=DMP_LSPX&attr_raw= LSPXNS%3d1" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;"/>
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<div id="apvad-64fed952a457b4f1709669c652538f23" style="position:relative;margin-left:auto;margin-right:auto;width:300px;" data-adformat="rect"></div>
-<script type="text/javascript" src="//dev1.srv.appvador.com/endpoints2/uvat.js.php?s=64fed952a457b4f1709669c652538f23"></script>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-<!-- Conversion Pixel - KDDI株式会社_auショッピングモール - DO NOT MODIFY -->
-<script type='text/javascript'>
-  //<![CDATA[
-  var arr = [];
-  "aaa|bbb|ccc".split("|").forEach(
-     function(id){
-           arr.push({product_id: id, price: 0});
-     }
-   );
-   var supership_pixel_params = {datafeed_conversions: arr};
-  //]]>
-</script>
-<script src='https://ssl.socdm.com/s/so_sg.js?cvid=9571&datafeed=cv-14253' type='text/javascript'></script>
-<!-- End of Conversion Pixel -->
-
-<!-- Segment Pixel - KDDI株式会社_auショッピングモール - DO NOT MODIFY -->
-<script type='text/javascript'>
-  //<![CDATA[
-    var ecomm_prodid = (/item\/(\d+)/.exec(location.pathname) ? /item\/(\d+)/.exec(location.pathname)[1] : /\?id=(\d+)/.exec(location.href)[1]);
-    var supership_pixel_params = {
-      datafeed_product_id: ecomm_prodid
-    };
-  //]]>
-</script>
-<script src='https://ssl.socdm.com/s/so_sg.js?datafeed=detail-14253&sgid=34868' type='text/javascript'></script>
-<!-- End of Segment Pixel -->
-
-<a href="http://tg.socdm.com/aux/rd?url=http%3a%2f%2fbid%2esocdm%2ecom%2faux%2frd%3furl%3dhttp%253a%252f%252ftest4649%252egithub%252eio%252findex2%252ehtml">reffere確認</a>
+<a href src="https://j8ahf.app.goo.gl/Zi7X" />Dynamic Links Test</a>
 </body>
 </html>
