--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<a href src="https://j8ahf.app.goo.gl/Zi7X" />Dynamic Links Test</a>
+<a href="https://j8ahf.app.goo.gl/Zi7X" />Dynamic Links Test</a>
 </body>
 </html>
