--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<script language="JavaScript" type="text/javascript" src="https://tg.socdm.com/adsv/v1?id=8085&posall=RTB&schedule_id=55666.60406.405720&family_id=405720&creative_id=891549&loglocation_id=9563&proto=google&wpr=%%WINNING_PRICE%%&rdp=%%CLICK_URL_ESC%%&ssplocid=google%3Awomen.benesse.ne.jp%2Fforum&prv2=ig9WkPpYOPKR6E7ROkOhyjW6Gzxi9Y1nDVk3ypzxoEMb&t=js&xuid=WHRIJcCo5k8AAHpBpLAAAAAA&ctsv=a-ad78&width=300&height=250&seqid=56ddaa33-d7b7-bd22-0abf-4470dd9da092&seqtime=1493181562541&ssp_tag_id=524923825&bidtime=1493181562&idx=0"><!-- --></script>
+<script language="JavaScript" type="text/javascript" src="https://tg.socdm.com/adsv/v1?id=8085&posall=RTB&schedule_id=55833.60573.405027&family_id=405027&creative_id=892955&loglocation_id=9563&proto=google&wpr=%%WINNING_PRICE%%&rdp=%%CLICK_URL_ESC%%&ssplocid=google%3Adorasute.blog.fc2.com%2F&prv2=ig9WkPpYOPKR6E7ROkOhyjW6Gzxi9Y1nDVk3ypzxoEMb&t=js&xuid=Vq2dEcCo5kwAAFLckiIAAAAA&ctsv=ad294&width=320&height=50&seqid=b6ebde00-dfa6-4460-5fda-c5231c0bb71d&seqtime=1493264833315&ssp_tag_id=2940342177&bidtime=1493264833&idx=0"><!-- --></script>
 
 </body>
 </html>
