--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <body>
-
-<script language="JavaScript" type="text/javascript" src="https://tg.socdm.com/adsv/v1?id=8085&posall=RTB&schedule_id=55833.60573.405027&family_id=405027&creative_id=892955&loglocation_id=9563&proto=google&wpr=%%WINNING_PRICE%%&rdp=%%CLICK_URL_ESC%%&ssplocid=google%3Adorasute.blog.fc2.com%2F&prv2=ig9WkPpYOPKR6E7ROkOhyjW6Gzxi9Y1nDVk3ypzxoEMb&t=js&xuid=Vq2dEcCo5kwAAFLckiIAAAAA&ctsv=ad294&width=320&height=50&seqid=b6ebde00-dfa6-4460-5fda-c5231c0bb71d&seqtime=1493264833315&ssp_tag_id=2940342177&bidtime=1493264833&idx=0"><!-- --></script>
+aaa
+<img src="https://tg.socdm.com/aux/dmpsync?vid=aupp&uid=uid001" width="1" height
+="1" style="display:none;position:absolute;border:none;padding:0;margin:0;/>
+bbb
 
 </body>
 </html>
