--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
 <body>
 aaa
-<img src="https://tg.socdm.com/aux/dmpsync?vid=aupp&uid=uid001" width="1" height
-="1" style="display:none;position:absolute;border:none;padding:0;margin:0;/>
+<img src="https://tg.socdm.com/aux/dmpsync?vid=aupp&uid=uid001" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;/>
 bbb
 
 </body>
