--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
 <body>
-aaa<img src="https://tg.socdm.com/aux/dmpsync?vid=aupp&uid=uid001" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;" />bbb
 
+<script type="text/javascript">
+!function(r,e,a,t){if(r._parrable=r._parrable||{},r._parrable.startTime=r.performance?performance.now():Date.now(),r._parrable.trackers=r._parrable.trackers||[],r._parrable.tracker=r._parrable.tracker||[],r._parrable.counterLoader=r._parrable.counterLoader+1||1,r._parrable.counterScript=r._parrable.counterScript||0,r._parrable.loaderVersions=r._parrable.loaderVersions||[],r._parrable.tracker[r._parrable.counterLoader-1]=[],t.trackers.forEach(function(e){r._parrable.trackers.indexOf(e)<0&&r._parrable.tracker[r._parrable.counterLoader-1].push(e)}),r._parrable.tracker[r._parrable.counterLoader-1].length&&(r._parrable.trackers.push.apply(r._parrable.trackers,r._parrable.tracker[r._parrable.counterLoader-1]),r._parrable.loaderVersions[r._parrable.counterLoader-1]="3.1.0",r._parrable.timeout=t.timeout||0,r._parrable.timer=t.timer||!1,r._hawk=function(){r._hawk.queue.push(arguments)},r._hawk.queue=[],r._hawk.config=r._parrable,!("browserid"in window._hawk))){var o=new RegExp("(?:^|;)\\s?"+"_parrable_hawk".replace(/([.*+?^=!:\$\{\}()|[\]\/\\])/g,"\\$1")+"=(.*?)(?:;|$)","i"),n=document.cookie.match(o);window._hawk.browserid=n&&decodeURIComponent(n[1])?n&&decodeURIComponent(n[1]):null;var c=e.createElement("script");c.async=1,c.src=a;var p=e.getElementsByTagName("script")[0]||e.head;c.onerror=function(e){console.error("Hawk could not load");var a;"function"==typeof r.CustomEvent?a=new CustomEvent("hawk.loadError",{detail:e}):(a=document.createEvent("CustomEvent"),a.initCustomEvent("hawk.loadError",!0,!1,e)),document.dispatchEvent(a)},p.parentNode.insertBefore(c,p)}}(window,document,"https://h.parrable.com/hawk.js",{trackers:["5b4f9c7a-000d-4ebb-8a48-649c1b2b35c5"],timer:true});
+</script>
+<script type="text/javascript">
+  _hawk("parrable",function(parrable) {
+    console.log(parrable);
+  });
+</script>
 </body>
 </html>
