--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 
-<script src='//i.socdm.com/s/so_sg.js?cvid=4836' type='text/javascript'></script>
+<a href="https://app.adjust.com/3gcei8?campaign=62063&adgroup=448844&creative=972946&idfa=09BFB240-D811-4344-B5BE-8EABB8E99CE1&scaleout_click_id=xxx&deep_link=jp.co.studioking.bokudora%3A%2F%2F">test</a>
 </body>
 </html>
