--- a/index.html
+++ b/index.html
@@ -2,5 +2,11 @@
 <body>
 
 <a href="https://app.adjust.com/3gcei8?campaign=62063&adgroup=448844&creative=972946&idfa=09BFB240-D811-4344-B5BE-8EABB8E99CE1&scaleout_click_id=xxx&deep_link=jp.co.studioking.bokudora%3A%2F%2F">test</a>
+<br>
+<br>
+<br>
+<br>
+
+<a href="https://app.adjust.com/3gcei8?campaign=${ORDER_ID}&adgroup=${SCHEDULE_ID}&creative=${CREATIVE_ID}&gps_adid=${ADVERTISING_ID}&scaleout_click_id=${CONVERSION_PIXEL_PARAMS_ENC}&deep_link=jp.co.studioking.bokudora%3A%2F%2F">android</a>
 </body>
 </html>
