--- a/index2.html
+++ b/index2.html
@@ -1,29 +1,6 @@
 <html>
 <body>
+<script src='//i.socdm.com/s/so_sg.js?delay=5&sgid=15765' type='text/javascript'></script>
 
-<script src="https://bs.serving-sys.com/BurstingPipe/adServer.bs?cn=rsb&c=28&pli=19758709&PluID=0&w=320&h=100&ord=${RANDOM}&ncu=$$${CLICK_URL_1}$$</script>
-<noscript>
-<a href="${CLICK_URL_1}https%3A//bs.serving-sys.com/BurstingPipe/adServer.bs%3Fcn%3Dbrd%26FlightID%3D19758709%26Page%3D%26PluID%3D0%26Pos%3D1717475979" target="_blank"><img src="https://bs.serving-sys.com/BurstingPipe/adServer.bs?cn=bsr&FlightID=19758709&Page=&PluID=0&Pos=1717475979" border=0 width=320 height=100></a>
-</noscript>
-
-
-
-
-<!--
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-<div style="background-color: #000;width:300px;height:250px;margin:0 auto;padding:0;text-align:center;color:#fff;" id="target">
-        viewability check 300x250
-</div>
-
-<script src="http://s3-ap-northeast-1.amazonaws.com/dev1-cloudfront-creative/js/ViewabilityTracker.js"></script>
-<script type="text/javascript">
-var v = new APV.ViewabilityTracker(document.getElementById('target'), 'http://gwks.heteml.jp/apvtest/dev/vast/inview');
-v.start();
-</script>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
--->
 </body>
 </html>
