--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<script src='//i.socdm.com/s/so_sg.js?delay=5&sgid=15765' type='text/javascript'></script>
+<script src='//i.socdm.com/s/so_sg.js?sgid=15765' type='text/javascript'></script>
 
 </body>
 </html>
