--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <body>
-
-<a href="https://app.adjust.com/3gcei8?campaign=62063&adgroup=448844&creative=972946&idfa=09BFB240-D811-4344-B5BE-8EABB8E99CE1&scaleout_click_id=xxx&deep_link=jp.co.studioking.bokudora%3A%2F%2F">test</a>
+aaa
+<img src='https://bs.serving-sys.com/serving/adServer.bs?cn=display&c=19&mc=imp&pli=22653309&PluID=0&ord=${RANDOM}&rtu=-1' style='position:absolute;border:none;padding:0;margin:0;' height='1' width='1' />
+bbb
 <br>
 <br>
 <br>
 <br>
 
-<a href="https://app.adjust.com/3gcei8?campaign=${ORDER_ID}&adgroup=${SCHEDULE_ID}&creative=${CREATIVE_ID}&gps_adid=${ADVERTISING_ID}&scaleout_click_id=${CONVERSION_PIXEL_PARAMS_ENC}&deep_link=jp.co.studioking.bokudora%3A%2F%2F">android</a>
 </body>
 </html>
